--- a/views/all.ejs
+++ b/views/all.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -7,46 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>products</title>
+      
+        <link rel="stylesheet" href="/css/style.css">
+    <title>Lista de produtos</title>
 </head>
 
+
 <body>
+    <% title = "Produtos" %>
 
-    <div class="container-md">
+    <%- include('./components/header.ejs') %>
 
-        <h1>products</h1>
-        <a href="/add">ADD products</a>
+    <div class="container d-flex">
 
         <% for(let i=0; i < products.length; i++){ %>
 
-            <div class="card p-4 mt-1">
+            <div class="card col-4 p-4">
                 <div id="<%= products[i]._id %>""   class=" d-flex justify-content-between align-items-center">
                     <div class="d-flex flex-column">
-                        <h2>
+                        <h2 id="pri">
                             <%= products[i].name %>
                         </h2>
                         <div>
-                            <%= products[i].description %>
+                            <span id="desc"><%= products[i].description %></span>
                         </div>
                         <div>
                             <span class="text-muted" href="<%= products[i].category %>">
-                                <%= products[i].category %>
-                            </span>
-                        </div>
-                        <div>
-                            <span class="text-muted" href="<%= products[i].price %>">
-                                <%= products[i].price %>
+                                <span>Categoria: </span>
+                                <b><%= products[i].category %></b>
                             </span>
                         </div>
                         <div>
                             <span class="text-muted" href="<%= products[i].quantity %>">
-                                <%= products[i].quantity %>
+                                <span>Estoque: </span>
+                                <b><%= products[i].quantity %> Und.</b>
+                            </span>
+                        </div>
+                        <div>
+                            <span class="text-muted" href="<%= products[i].price %>">
+                                R$: <b><%= products[i].price %></b>
                             </span>
                         </div>
                     </div>
                     <div class="d-flex flex-column">
-                        <button class="btn btn-danger mb-2" onclick="deleteLink('<%= products[i]._id%>')" )>Delete</button>
-                        <a class="btn btn-info" href="/edit/<%= products[i]._id %> ">Edit</a>
+                        <button class="btn btn-danger mb-2" onclick="deleteLink('<%= products[i]._id%>')"
+                            )><i class="far fa-trash-alt"></i> Excluir</button>
+                        <a class="btn btn-info " href="/edit/<%= products[i]._id %> "><i class="far fa-edit"></i> Editar</a>
                     </div>
                 </div>
             </div>
@@ -54,6 +60,7 @@
             <% } %>
 
     </div>
+
 
     <script src="/scripts/script.js"></script>
 </body>
