--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title> Edit </title>
+    <title> Editar Produto </title>
 </head>
 
 <body>
     <div class="container w-50">
-        <h1>Edit Product</h1>
+        <h1>Editar Produto</h1>
 
         <form class="d-flex flex-column" action="/edit/<%= body.id %> " method="POST">
             <input class="mb-2 form-control" name="name" placeholder="name" value="<%= body.name %>">
@@ -21,7 +21,7 @@
             <input class="mb-2 form-control" name="category" placeholder="category" value="<%= body.category %>">
             <input class="mb-2 form-control" name="price" placeholder="price" value="<%= body.price %>">
             <input class="mb-2 form-control" name="quantity" placeholder="quantity" value="<%= body.quantity %>">
-            <button class="btn btn-primary">Edit</button>
+            <button class="btn btn-primary">Editar</button>
         </form>
 
         <% if(error){ %>
