--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>add</title>
+    
+    <title>Adicionar Produto</title>
 </head>
 
 <body>
+    <% title = "Adicionar" %>
+    <%- include('./components/header.ejs') %>
     <div class="container w-50">
-    <h1>Create Product</h1>
+    <h1>Preencha os campos</h1>
     <form class="d-flex flex-column" action="/" method="POST">
-        <input class="mb-2 form-control" name="name" placeholder="name" value="<%= body.name %>" >
-        <input class="mb-2 form-control"  name="description" placeholder="description" value="<%= body.description %>">
-        <input class="mb-2 form-control"  name="category" placeholder="category" value="<%= body.category %>">
-        <input class="mb-2 form-control"  name="price" placeholder="price" value="<%= body.price %>">
-        <input class="mb-2 form-control"  name="quantity" placeholder="quantity" value="<%= body.quantity %>">
-        <button class="btn btn-primary form-control">Save</button>
+        <input class="mb-2 form-control" name="name" placeholder="nome" value="<%= body.name %>" >
+        <input class="mb-2 form-control"  name="description" placeholder="descrição" value="<%= body.description %>">
+        <input class="mb-2 form-control"  name="category" placeholder="categoria" value="<%= body.category %>">
+        <input class="mb-2 form-control"  name="price" placeholder="preço" value="<%= body.price %>">
+        <input class="mb-2 form-control"  name="quantity" placeholder="quantidade" value="<%= body.quantity %>">
+        <button class="btn btn-primary form-control">Salvar</button>
     </form>
 
     <% if(error){ %>
