--- a/views/all.ejs
+++ b/views/all.ejs
@@ -45,7 +45,7 @@
                         </div>
                         <div>
                             <span class="text-muted" href="<%= products[i].price %>">
-                                R$: <b><%= products[i].price %></b>
+                                R$: <b><%= products[i].price.toFixed(2).replace('.',',') %></b>
                             </span>
                         </div>
                     </div>
