feat: categories, employees, brands

--- a/views/all.ejs
+++ b/views/all.ejs
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column">
-                        <button class="btn btn-danger mb-2" onclick="deleteLink('<%= products[i]._id%>')"
+                        <button class="btn btn-danger mb-2" onclick="deleteProduct('<%= products[i]._id%>')"
                             )><i class="far fa-trash-alt"></i> Excluir</button>
                         <a class="btn btn-info " href="/edit/<%= products[i]._id %> "><i class="far fa-edit"></i> Editar</a>
                     </div>
