--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -16,9 +16,9 @@
 
         <form class="d-flex flex-column" action="/edit/<%= body.id %> " method="POST">
             <input class="mb-2 form-control" name="name" placeholder="name" value="<%= body.name %>">
-            <input class="mb-2 form-control" name="description" placeholder="description"
-                value="<%= body.description %>">
+            <input class="mb-2 form-control" name="description" placeholder="description" value="<%= body.description %>">
             <input class="mb-2 form-control" name="category" placeholder="category" value="<%= body.category %>">
+            <input class="mb-2 form-control" name="brand" placeholder="brand" value="<%= body.category %>">
             <input class="mb-2 form-control" name="price" placeholder="price" value="<%= body.price %>">
             <input class="mb-2 form-control" name="quantity" placeholder="quantity" value="<%= body.quantity %>">
             <button class="btn btn-primary">Editar</button>
