--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
         <input class="mb-2 form-control" name="name" placeholder="nome" value="<%= body.name %>" >
         <input class="mb-2 form-control"  name="description" placeholder="descrição" value="<%= body.description %>">
         <input class="mb-2 form-control"  name="category" placeholder="categoria" value="<%= body.category %>">
+        <input class="mb-2 form-control"  name="brand" placeholder="brand" value="<%= body.brand %>">
         <input class="mb-2 form-control"  name="price" placeholder="preço" value="<%= body.price %>">
         <input class="mb-2 form-control"  name="quantity" placeholder="quantidade" value="<%= body.quantity %>">
         <button class="btn btn-primary form-control">Salvar</button>
