feat: brand, employee and category

--- a/views/all.ejs
+++ b/views/all.ejs
@@ -44,6 +44,12 @@
                             </span>
                         </div>
                         <div>
+                            <span class="text-muted" href="<%= products[i].quantity %>">
+                                <span>Marca: </span>
+                                <b><%= products[i].brand %> Und.</b>
+                            </span>
+                        </div>
+                        <div>
                             <span class="text-muted" href="<%= products[i].price %>">
                                 R$: <b><%= products[i].price.toFixed(2).replace('.',',') %></b>
                             </span>
