--- a/views/all.ejs
+++ b/views/all.ejs
@@ -47,7 +47,7 @@
                         <div>
                             <span class="text-muted" href="<%= products[i].quantity %>">
                                 <span>Marca: </span>
-                                <b><%= products[i].brand %> Und.</b>
+                                <b><%= products[i].brand %></b>
                             </span>
                         </div>
                         <div>
