--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -14,7 +14,10 @@
   <nav>
     <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fas fa-users"></i> Discentes</a>
     <a href="/"><i class="fas fa-list"></i> Listar Produtos</a>
-    <a href="/add"><i class="fas fa-prescription-bottle-alt"></i> Add Produto</a>
+    <a href="/employee"><i class="fas fa-list"></i> Listar Empregados</a>
+    <a href="/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Produto</a>
+    <a href="/employee/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Empregado</a>
+    <a href="/category/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Categoria</a>
   </nav>
 </header>
 
@@ -36,7 +39,7 @@
           </thead>
           <tbody>
             <tr>
-              <th scope="row">2019***</th>
+              <th scope="row">2019119038</th>
               <td>Higor Lemos Prado </td>
             </tr>
             <tr>
