--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,31 +5,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
     <title>Adicionar Produto</title>
 </head>
 
 <body>
-    <% title = "Adicionar" %>
-    <%- include('./components/header.ejs') %>
-    <div class="container w-50">
-    <h1>Preencha os campos</h1>
-    <form class="d-flex flex-column" action="/" method="POST">
-        <input class="mb-2 form-control" name="name" placeholder="nome" value="<%= body.name %>" >
-        <input class="mb-2 form-control"  name="description" placeholder="descrição" value="<%= body.description %>">
-        <input class="mb-2 form-control"  name="category" placeholder="categoria" value="<%= body.category %>">
-        <input class="mb-2 form-control"  name="brand" placeholder="brand" value="<%= body.brand %>">
-        <input class="mb-2 form-control"  name="price" placeholder="preço" value="<%= body.price %>">
-        <input class="mb-2 form-control"  name="quantity" placeholder="quantidade" value="<%= body.quantity %>">
-        <button class="btn btn-primary form-control">Salvar</button>
-    </form>
+    <% title="Adicionar" %>
+        <%- include('./components/header.ejs') %>
+            <div class="container w-50">
+                <h1>Preencha os campos</h1>
+                <form class="d-flex flex-column" action="/" method="POST">
+                    <input class="mb-2 form-control" name="name" placeholder="nome" value="<%= body.name %>">
+                    <input class="mb-2 form-control" name="description" placeholder="descrição"
+                        value="<%= body.description %>">
+                    
+                    <select class="form-select mb-2" name="category" id="category">
+                        <option value="" disabled selected>Selecione a categoria</option>
+                    </select>
+                    <select class="form-select mb-2" name="brand" id="brand">
+                        <option value="" disabled selected>Selecione a marca</option>
+                    </select>
+                    <input class="mb-2 form-control" name="price" placeholder="preço" value="<%= body.price %>">
+                    <input class="mb-2 form-control" name="quantity" placeholder="quantidade"
+                        value="<%= body.quantity %>">
+                    <button class="btn btn-primary form-control">Salvar</button>
+                </form>
 
-    <% if(error){ %>
-        <h3><%= error.message %> </h3>
-    <% } %>
-
-    </div>
+            </div>
 </body>
 
 </html>
+
+<script>
+    selectBrand = document.querySelector('#brand')
+    fetch('/brand/getLinks').then(res => res.json()).then((data) => {
+        data.forEach(element => {
+           optionBrand = document.createElement("option")
+            optionBrand.value = element.name
+            optionBrand.innerHTML = element.name
+            selectBrand.appendChild(optionBrand)
+            console.log(optionBrand.value)
+        });
+    })
+    selectCategory = document.querySelector('#category')
+    fetch('/category/getLinks').then(res => res.json()).then((data) => {
+        data.forEach(element => {
+           optionCategory = document.createElement("option")
+            optionCategory.value = element.name
+            optionCategory.innerHTML = element.name
+            selectCategory.appendChild(optionCategory)
+            console.log(optionCategory.value)
+        });
+    })
+</script>
