--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -18,6 +18,8 @@
     <a href="/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Produto</a>
     <a href="/employee/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Empregado</a>
     <a href="/category/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Categoria</a>
+    <a href="/brand/add"><i class="fas fa-prescription-bottle-alt"></i> Adicionar Marca</a>
+
   </nav>
 </header>
 
